--- a/_posts/0000-01-02-logswan9.md
+++ b/_posts/0000-01-02-logswan9.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"An eye for an eye, is a pointless exchange."
 Use the left arrow to go back!
